--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "16": "public/tldri4.png"
   },
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "index.html"
   },
   "background": {
     "service_worker": "src/background.ts",
