--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,23 @@
   "manifest_version": 3,
   "name": "TL;DR Next",
   "version": "1.0.0",
-  "permissions": ["tabs"],
+  "permissions": [
+    "tabs"
+  ],
   "icons": {
-    "16": "public/tldri4.png"
+    "16": "public/icon_term_16.png",
+    "32": "public/icon_term_32.png",
+    "48": "public/icon_term_48.png",
+    "128": "public/icon_term_128.png"
   },
   "action": {
-    "default_popup": "index.html"
+    "default_popup": "index.html",
+    "default_icon": {
+      "16": "public/icon_term_16.png",
+      "32": "public/icon_term_32.png",
+      "48": "public/icon_term_48.png",
+      "128": "public/icon_term_128.png"
+    }
   },
   "background": {
     "service_worker": "src/background.ts",
